Fixing alignment issue with hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ body{
 
 .main-header {
     width: 100%;
-    height: 800px;
+    height: 200px;
 }
 
 .hero-image{
